Modify: migrate javascript code to game.js

--- a/index.html
+++ b/index.html
@@ -4,24 +4,12 @@
         <meta charset="utf-8">
         <title>NO Game</title>	
         <link rel="stylesheet" href="main.css" />
+        <script src="game.js"></script>
     </head> 
 <body>
 <div id="game">
 	<canvas class="background" id="draw-background"></canvas>
     <div class="screen" id="score-board">Scores: 0</div>	
 </div>
-<script>
-    var canvas = document.getElementById("draw-background"),
-        ctx = canvas.getContext("2d");
-
-        canvas.width = 240;
-        canvas.height = 320;
-
-         ctx.beginPath();
-         ctx.arc(50, 100, 50, 0 * Math.PI, 2 * Math.PI, false);    
-         ctx.closePath();   
-         ctx.fill();
-
-</script>
 </body> 
 </html>
