Modify: export public methods

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 	<canvas class="background" id="draw-background"></canvas>
     <div class="screen" id="score-board">Scores: 0</div>	
 </div>
+<script>
+    game.drawBall();
+</script>
 </body> 
 </html>
