Refactor: use modernize to load javascript files

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
         <meta charset="utf-8">
         <title>NO Game</title>	
         <link rel="stylesheet" href="main.css" />
-        <script src="game.js"></script>
+        <script src="modernizr.min.js"></script>
+        <script src="loader.js"></script>
     </head> 
 <body>
 <div id="game">
 	<canvas class="background" id="draw-background"></canvas>
     <div class="screen" id="score-board">Scores: 0</div>	
 </div>
-<script>
-    game.drawBall();
-</script>
 </body> 
 </html>
