Add: 'click' event handler

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div id="game">
 	<canvas class="background" id="draw-background"></canvas>
     <div class="screen" id="score-board">Scores: 0</div>	
+    <textarea id="input"></textarea>
 </div>
 </body> 
 </html>
