Modify: parsing JSON

--- a/scores.html
+++ b/scores.html
@@ -13,7 +13,7 @@
 <script id="scoresTemplate" type="text/x-jquery-tmpl"> 
 		<tr>
 			<td>${name}</td>
-			<td>${score}</td>
+			<td>${scores}</td>
 		</tr>
 </script>
 
@@ -27,11 +27,18 @@
 </div>
 
 <script>
-var json;
+var json = {};
 var ws;
 
 function wsOnMessage(message) {
-    json = JSON.parse(message.data);
+    var msg = "["+message.data+"]";
+    var data = JSON.parse(msg);
+
+    json = {
+        type: 'score-board',
+        data: data
+    };
+
     showScoreboard();
 }
 
@@ -43,9 +50,9 @@ function receiveScores() {
     /* json.data.scores should be:
 
 	var scores = [
-	    { name: "Jollen", score: 50 },
-	    { name: "Frank", score: 100 },
-	    { name: "Ellaine", score: 258 }
+	    { name: "Jollen", scores: 50 },
+	    { name: "Frank", scores: 100 },
+	    { name: "Ellaine", scores: 258 }
 	];
 	
 	json = {
